[package]
name = "image_optimiser"
version = "0.1.0"
edition = "2021"

[dependencies]
regex = "1"
urlencoding = "2.1.3"
reqwest = "0.12.12"
image = "0.25.5"
wasm-bindgen = "0.2.100"
getrandom = { version = "0.2.15", features = ["js"] }
web-sys = { version = "0.3.77", features = ["console"] }
wasm-bindgen-futures = "0.4.50"



[dev-dependencies]
wasm-bindgen-test = "0.2.45"
futures = "0.1.27"
js-sys = "0.3.22"


[lib]
crate-type = ["cdylib", "rlib"]

[profile.release]
opt-level = "s"
# This makes the compiled code faster and smaller, but it makes compiling slower,
# so it's only enabled in release mode.
#lto = true